--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
-    "mongodb": "^2.2.4"
+    "mongodb": "^2.2.4",
+    "valid-url": "^1.0.9"
   }
 }
